# projeto-bigdata

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run.ps1
.streamlit/: config.toml
docs/: ARCHITECTURE_SUMMARY.md  INTERFACE_IMPROVEMENTS.md  PIPELINE_DOCUMENTATION.md
notebooks/: README.md  movies_pipeline_colab.ipynb
scripts/: build_exe.py  setup.ps1  setup.sh
src/: __init__.py  main.py
src/application/: __init__.py
src/application/ingestion/: __init__.py  ingest_movies.py
src/application/loading/: __init__.py  load_analytics.py
src/application/transformation/: __init__.py  transform_movies.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  movie.py
src/domain/exceptions/: __init__.py  pipeline_exceptions.py
src/infrastructure/: __init__.py
src/infrastructure/config/: settings.py
src/infrastructure/repositories/: __init__.py  data_repository.py
src/presentation/: __init__.py
src/presentation/cli/: __init__.py  pipeline_cli.py
terraform/aws/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/azure/: README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/gcp/: README.md  backend.tf  main.tf  outputs.tf  variables.tf
tests/unit/: test_entities.py
